--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -6,28 +6,36 @@
         <div class="amc-datetimepicker-selecteddate">@SelectedDateDisplay</div>
 
         <div class="amc-datetimepicker-selection">
-            <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevClick">‹</button>
-            <div class="amc-datetimepicker-selection-info">
-                <span @onclick="ChangeSelectionState">@DisplaySelectionInfo</span>
+            <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevClick">
+                <svg viewBox="0 0 50 50">
+                    <polyline points="36.8,1.5 13.3,24.8 36.8,48 "></polyline>
+                </svg>
+            </button>
+            <div @onclick="ChangeSelectionState" class="amc-datetimepicker-selection-info">
+                <span>@DisplaySelectionInfo</span>
             </div>
-            <button class="amc-datetimepicker-selection-next" @onclick="OnNextClick">›</button>
+            <button class="amc-datetimepicker-selection-next" @onclick="OnNextClick">
+                <svg viewBox="0 0 50 50">
+                    <polyline points="13.3,48.1 36.8,24.8 13.3,1.5 "></polyline>
+                </svg>
+            </button>
         </div>
     </div>
     <div class="amc-datetimepicker-body">
         @if (SelectionState == DateTimePickerSelectionState.Day)
         {
             <div class="amc-datetimepicker-calendar">
-                <div class="amc-datetimepicker-calendar-weekdays">
+                <div class="amc-datetimepicker-calendar-weeks">
                     @foreach (string weekday in WeekDaysNames)
                     {
-                        <div>@weekday</div>
+                        <div class="amc-datetimepicker-calendar-week">@weekday</div>
                     }
                 </div>
 
                 <div class="amc-datetimepicker-calendar-days">
                     @foreach (DateTimePickerDate date in Days)
                     {
-                        <div class="amc-datetimepicker-calendar-day @date.Classes" @onclick="() => OnDateSelected(date)">@date.Day</div>
+                        <div class="amc-datetimepicker-calendar-day @date.CssClasses" @onclick="() => OnDateSelected(date)">@date.Day</div>
                     }
                 </div>
             </div>
@@ -37,7 +45,7 @@
             <div class="amc-datetimepicker-months">
                 @foreach (DateTimePickerMonth month in Months)
                 {
-                    <div class="amc-datetimepicker-months-month @month.Classes" @onclick="() => OnMonthSelected(month.Month)">@month.Name</div>
+                    <div class="amc-datetimepicker-months-month @month.CssClasses" @onclick="() => OnMonthSelected(month.Month)">@month.Name</div>
                 }
             </div>
         }
@@ -46,7 +54,7 @@
             <div class="amc-datetimepicker-years">
                 @foreach (DateTimePickerYear year in Years)
                 {
-                    <div class="amc-datetimepicker-years-year @year.Classes" @onclick="() => OnYearSelected(year.Year)">@year.Year</div>
+                    <div class="amc-datetimepicker-years-year @year.CssClasses" @onclick="() => OnYearSelected(year.Year)">@year.Year</div>
                 }
             </div>
         }
