--- a/Demo/_Imports.razor
+++ b/Demo/_Imports.razor
@@ -9,3 +9,4 @@
 @using AngryMonkey.Cloud.Components
 @using AngryMonkey.Cloud.Components.Demo
 @using AngryMonkey.Cloud.Components.Demo.Shared
+@using System.Data
