--- a/Demo/Shared/Components.razor
+++ b/Demo/Shared/Components.razor
@@ -1,7 +1,8 @@
 ﻿<div class="components">
     <div class="components-links">
-    <a href="/progressbar">Progress Bar</a>
-    <a href="/videoplayer">Video Player</a>
-    <a href="/datetimepicker">Date Time Picker</a>
+        <a href="/datetimepicker">Date Time Picker</a>
+        <a href="/progressbar">Progress Bar</a>
+        <a href="/videoplayer">Video Player</a>
+        <a href="/gridview">Grid View</a>
     </div>
 </div>
