--- a/Demo/wwwroot/css/site.css
+++ b/Demo/wwwroot/css/site.css
@@ -8,7 +8,7 @@
 body {
   height: 90vh;
   width: 90vw;
-  background-image: url(/bg2.jpg);
+  background-image: url(/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -35,12 +35,10 @@ body .components-links a:visited {
   font-family: sans-serif;
   letter-spacing: 2px;
   margin-left: 20px;
+  border-bottom: 1px solid transparent;
 }
 body .components-links a:hover {
-  border-bottom: 1px groove #fff;
-}
-body .components-links a:hover:active {
-  border-bottom-color: var(--LinkColor);
+  border-bottom: 1px solid #fff;
 }
 body .components-icon {
   display: none;
@@ -49,14 +47,7 @@ body .components-icon {
   body .components-links {
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    position: absolute;
-    right: 45px;
-    top: 53px;
-    padding: 5px;
-    z-index: 2;
-    background-color: rgba(100, 100, 100, 0.3);
-    border-radius: 15px;
+    align-items: center;
   }
   body .components-links a,
   body .components-links a:hover,
@@ -64,7 +55,7 @@ body .components-icon {
   body .components-links a:focus,
   body .components-links a:visited {
     padding: 5px;
-    margin-left: 0;
+    margin-top: 10px;
   }
   body .components-links a:hover {
     border-bottom: 1px groove #fff;
@@ -72,18 +63,6 @@ body .components-icon {
   }
   body .components-links a:hover:active {
     border-bottom-color: var(--LinkColor);
-  }
-  body .components-icon {
-    display: block;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-  }
-  body .components-icon svg {
-    fill: rgba(255, 255, 255, 0.9);
-    background-color: transparent;
-    width: 40px;
-    height: 40px;
   }
 }
 body main {
@@ -95,7 +74,6 @@ body main > .amc-progressbar {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
 }
 body main > .amc-videoplayer {
   --amc-videoplayer-accentColor: var(--LinkColor) !important;
@@ -103,12 +81,10 @@ body main > .amc-videoplayer {
   height: 450px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
 }
 body main > .amc-datetimepicker {
   width: 750px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
 }
