--- a/Demo/src/css/site.less
+++ b/Demo/src/css/site.less
@@ -34,15 +34,11 @@ body {
                     font-family: sans-serif;
                     letter-spacing: 2px;
                     margin-left: 20px;
+                    border-bottom: 1px groove transparent;
                 }
 
                 &:hover {
-                    border-bottom: 1px groove #fff;
-
-
-                    &:active {
-                        border-bottom-color: var(--LinkColor);
-                    }
+                    border-color: #fff;
                 }
             }
         }
@@ -107,32 +103,24 @@ body {
     }
 
     main {
-        width: 100%;
         margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
 
         > .amc-progressbar {
             --amc-progressbar-accentColor: var(--LinkColor) !important;
             width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
         }
 
         > .amc-videoplayer {
             --amc-videoplayer-accentColor: var(--LinkColor) !important;
             width: 800px;
             height: 450px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
         }
 
         > .amc-datetimepicker {
-            width: 750px;
-            height: 600px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
+            --amc-datetimepicker-backgroundColor: #e0e0e0 !important;
+            --amc-datetimepicker-accentColor: var(--LinkColor) !important;
         }
     }
 }
