--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -50,7 +50,7 @@
                             <br />
                             <b>Cloud Video Player</b>
                             <br /><br />
-                            is an open source Blazor component manager by
+                            is an open source Blazor component managed by
                             <br />
                             <a target="_blank" href="https://angrymonkeycloud.com">Angry Monkey Cloud</a>
                         </div>
