--- a/Demo/src/css/site.less
+++ b/Demo/src/css/site.less
@@ -8,12 +8,13 @@
 body {
     height: 90vh;
     width: 90vw;
-    background-image: url(/bg.jpg);
+    /*background-image: url(/bg.jpg);*/
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     // background-color: #0c9da2;
+    background-color: #c4e3ed;
 
     .components {
         width: 100%;
@@ -92,8 +93,8 @@ body {
         }
 
         > .amc-datetimepicker {
-            --amc-datetimepicker-backgroundColor: #e0e0e0 !important;
-            --amc-datetimepicker-accentColor: var(--LinkColor) !important;
+            --amc-datetimepicker-backgroundColor: var(--LinkColor) !important;
+            --amc-datetimepicker-accentColor: #fff !important;
         }
     }
 }
