--- a/Demo/wwwroot/css/site.css
+++ b/Demo/wwwroot/css/site.css
@@ -8,11 +8,12 @@
 body {
   height: 90vh;
   width: 90vw;
-  background-image: url(/bg4.jpg);
+  /*background-image: url(/bg.jpg);*/
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  background-color: #c4e3ed;
 }
 body .components {
   width: 100%;
@@ -45,17 +46,9 @@ body .components-icon {
 }
 @media screen and (max-width: 1000px) {
   body .components-links {
-    visibility: hidden;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    position: absolute;
-    right: 45px;
-    top: 53px;
-    padding: 5px;
-    z-index: 2;
-    background-color: rgba(100, 100, 100, 0.3);
-    border-radius: 15px;
+    align-items: center;
   }
   body .components-links a,
   body .components-links a:hover,
@@ -63,7 +56,7 @@ body .components-icon {
   body .components-links a:focus,
   body .components-links a:visited {
     padding: 5px;
-    margin-left: 0;
+    margin-top: 10px;
   }
   body .components-links a:hover {
     border-bottom: 1px groove #fff;
@@ -71,21 +64,6 @@ body .components-icon {
   }
   body .components-links a:hover:active {
     border-bottom-color: var(--LinkColor);
-  }
-  body .components ._clicked {
-    visibility: visible;
-  }
-  body .components-icon {
-    display: block;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-  }
-  body .components-icon svg {
-    fill: rgba(255, 255, 255, 0.9);
-    background-color: transparent;
-    width: 40px;
-    height: 40px;
   }
 }
 body main {
@@ -103,6 +81,6 @@ body main > .amc-videoplayer {
   height: 450px;
 }
 body main > .amc-datetimepicker {
-  --amc-datetimepicker-backgroundColor: #e0e0e0 !important;
-  --amc-datetimepicker-accentColor: var(--LinkColor) !important;
+  --amc-datetimepicker-backgroundColor: var(--LinkColor) !important;
+  --amc-datetimepicker-accentColor: #fff !important;
 }
