--- a/Demo/src/css/site.less
+++ b/Demo/src/css/site.less
@@ -87,7 +87,7 @@ body {
         }
 
         > .amc-videoplayer {
-            --amc-videoplayer-accentColor: var(--LinkColor) !important;
+            /*--amc-videoplayer-accentColor: #ae00ff !important;*/
             width: 800px;
             height: 450px;
         }
