--- a/Demo/wwwroot/css/site.css
+++ b/Demo/wwwroot/css/site.css
@@ -76,7 +76,7 @@ body main > .amc-progressbar {
   width: 600px;
 }
 body main > .amc-videoplayer {
-  --amc-videoplayer-accentColor: var(--LinkColor) !important;
+  /*--amc-videoplayer-accentColor: #ae00ff !important;*/
   width: 800px;
   height: 450px;
 }
